--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-hello world
+<html>
+  <head>
+    <script src="jq.js"></script>
+  </head>
+  <body>
+    <script>
+      function get_friends(path) {
+	  const fs = require('fs');
+	  fs.readFile('./venner.txt');
+      } 
+    </script>
+
+    <p id="friends">bla</p>
+
+    <script>
+    document.getElementById("friends").innerHTML = get_friends("./venner.txt")
+    </script>
+      
+</html>
