--- a/index.html
+++ b/index.html
@@ -1,19 +1,14 @@
 <html>
-  <head>
-    <script src="jq.js"></script>
-  </head>
   <body>
     <script>
       function get_friends(path) {
-	  const fs = require('fs');
-	  fs.readFile('./venner.txt');
+  	  fr = new FileReader();
+	  fr.readAsText(path)
       } 
     </script>
 
-    <p id="friends">bla</p>
+    <p id="fest"></p>
 
-    <script>
-    document.getElementById("friends").innerHTML = get_friends("./venner.txt")
-    </script>
-      
+    <script>document.getElementById("fest").innerHTML = get_friends("./venner.txt")</script>
+
 </html>
