--- a/index.html
+++ b/index.html
@@ -1,22 +1,7 @@
 <html>
   <body>
-    <script>
-      function get_friends() {
-	  var txt = '';
-	  var xmlhttp = new XMLHttpRequest();
-	  xmlhttp.onreadystatechange = function(){
-	      if(xmlhttp.status == 200 && xmlhttp.readyState == 4){
-		  txt = xmlhttp.responseText;
-		  return txt
-	      }
-	  };
-	  xmlhttp.open("GET","venner.txt",true);
-	  xmlhttp.send();
-      } 
-    </script>
-
-    <p id="fest"></p>
-
-    <script>document.getElementById("fest").innerHTML = get_friends()</script>
+    <p>Regler og sprog kommer senere i aften!</p>
+    
+  </body>
 
 </html>
