Added language lists

--- a/index.html
+++ b/index.html
@@ -45,9 +45,44 @@
 
 	<h2>Sprog i konkurrencen</h2>
 
-	<ul>
-	  <li><i>Comming soon...</i></li>
-	</ul>
+	<b>GLÆD DIG! - d. 25. december er der frit valg af alle sprogene i konkurrencen :P</b>
+
+	<div class="language-list">
+	  <h3 style="text-align:center;">1. - 12 december</h3>
+	  <ul>
+	    <li>x84 Assembly</li>
+	    <li>Prolog</li>
+	    <li>ML - (ml, sml or moscow ml)</li>
+	    <li>COBOL</li>
+	    <li>awk</li>
+	    <li>oCaml</li>
+	    <li>Intercal</li>
+	    <li>Excel (Or other spreadheet application you see fit)</li>
+	    <li>emacslisp (Convince me if you want some VIM language sheit :P )</li>
+	    <li>Hare</li>
+	    <li>F# (Keep it functional - No funky dotnet stuff :P)</li>
+	    <li>Erlang</li>
+	  </ul>
+	</div>
+
+	<div class="language-list">
+	  <h3 style="text-align:center;">13. - 24 december</h3>
+	  <ul>
+	    <li>C</li>
+	    <li>C++</li>
+	    <li>C#</li>
+	    <li>Java</li>
+	    <li>Haskell</li>
+	    <li>Rust</li>
+	    <li>Python</li>
+	    <li>Javascript</li>
+	    <li>Ruby</li>
+	    <li>Perl</li>
+	    <li>Kotlin</li>
+	    <li>Go</li>
+	  </ul>
+	</div>
+
       </div>
 
       <div class="wheels-div">
