Added leaderboard code and (not) fix language list columns

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 
 	<h2>Regler</h2>
 
+	<p>Advent of code Leaderboard: <b>2253322-60a901e0</b></p>
+
 	<p>
 	  Hver dag ruller vi hjulet for at se hvilket sprog vi skal kode i <b>næste dag</b>, således
 	  man har tid til at installerer en oversætter (Hvis man vil prøv-hårdt og være først med
