Updated languages + Added discord link

--- a/index.html
+++ b/index.html
@@ -41,8 +41,9 @@ SOFTWARE.
 	  I år kommer vi lidt ekstra kanel på udfordringen og koder i et nyt sprog for hver dag!
 	  Så ikke nok med vi giver julemanden en gang spaghetti i år -
 	  <b>Vi giver ham spaghetti på 25 forskellige sprog!</b>
-
 	</p>
+
+	<h3><a href="https://discord.gg/vvBkPtdUxz">Discord link</a></h3>
 
 	<h2>Regler</h2>
 
@@ -83,12 +84,12 @@ SOFTWARE.
 	  <ul>
 	    <li>x86 Assembly</li>
 	    <li>Prolog</li>
-	    <li>ML - (ml, sml or moscow ml)</li>
-	    <li>COBOL</li>
+	    <li>Futhark</li>
+	    <li>Scratch</li>
 	    <li>awk</li>
 	    <li>oCaml</li>
 	    <li>Intercal</li>
-	    <li>Excel (Or other spreadheet application you see fit)</li>
+	    <li>LUA (Do you dare WoWLua?)</li>
 	    <li>emacslisp (or wierd VIM equivalent)</li>
 	    <li>Hare</li>
 	    <li>F# (Keep it functional - No funky dotnet stuff :P)</li>
