Added text to usage of Discord-Channel

--- a/index.html
+++ b/index.html
@@ -64,8 +64,9 @@ SOFTWARE.
 	</p>
 
 	<p>
-	  (Hvis jeg når det) Vil det være muligt at upload sin løsning til denne side så man kan
-	  se hvordan andre har løst opgaven i dagens sprog. Lad være med at snyde dig selv
+	  Den Discord-kanal der er linket til i toppen af siden er tiltænkt at vi kan upload vores løsninger
+	  dertil, og se hvordan vi hver især har løst opgaven.
+	  Lad være med at snyde dig selv
 	  og se/stjæl en andens løsning før du har din egen ;)
 	</p>
 
