--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ SOFTWARE.
       </table> 
       </div>
 
-    <audio id="background-music" src="https://www.soundboard.com/handler/DownLoadTrack.ashx?cliptitle=Bonus+Wheel+Music&filename=22/228047-a7c4d017-d4eb-4b46-8c07-e6de87c6299c.mp3" preload="auto">
+    <audio id="background-music" src="https://www.televisiontunes.com/uploads/audio/Wheel%20of%20Fortune%20-%201983-1989%20-%20with%20Audience%20Chant.mp3" preload="auto"><</audio>
     <script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
     <script src="wheel.js"></script>
      
