Added time when the wheel will be spinned

--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@ SOFTWARE.
     <div class="wrapper">
       <div class="content-div">
 	<h1>Advent of Code 2022 - New Day New Language Challenge!</h1>
+
+	<h2 style="color: red"><b>Vi ruller hjulet i dag klokken: 19:00!</b></h2>
 	
 	<p>
 	  Ho ho ho! Nu er det jul, og det betyder det er tid til endnu en omgang af
