--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ SOFTWARE.
 	<div class="language-list">
 	  <h3 style="text-align:center;">1. - 12 december</h3>
 	  <ul>
-	    <li>x86 Assembly</li>
+	    <li>Clojure</li>
 	    <li>Prolog</li>
 	    <li>Futhark</li>
 	    <li>Scratch</li>
