Forslag: Clojure i stedet for C++

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ SOFTWARE.
 	  <h3 style="text-align:center;">13. - 24 december</h3>
 	  <ul>
 	    <li>C</li>
-	    <li>C++</li>
+	    <li>Clojure</li>
 	    <li>C#</li>
 	    <li>Java</li>
 	    <li>Haskell</li>
