Added language of tomorrow

--- a/index.html
+++ b/index.html
@@ -154,6 +154,10 @@ SOFTWARE.
 	</tr>
 	<tr>
 	  <td>3. Dec</td>
+	  <td>Erlang</td>
+	</tr>
+	<tr>
+	  <td>4. Dec</td>
 	  <td></td>
 	</tr>
       </table> 
