--- a/index.html
+++ b/index.html
@@ -158,6 +158,10 @@ SOFTWARE.
 	</tr>
 	<tr>
 	  <td>4. Dec</td>
+	  <td>emacsLisp/Vimscript</td>
+	</tr>
+	<tr>
+	  <td>5. Dec</td>
 	  <td></td>
 	</tr>
       </table> 
