Updated with language for 6th of december

--- a/index.html
+++ b/index.html
@@ -164,6 +164,10 @@ SOFTWARE.
 	  <td>5. Dec</td>
 	  <td>Prolog</td>
 	</tr>
+	<tr>
+	  <td>6. Dec</td>
+	  <td>Futhark</td>
+	</tr>
       </table> 
       </div>
 
