Updated with language for 7th

--- a/index.html
+++ b/index.html
@@ -168,6 +168,10 @@ SOFTWARE.
 	  <td>6. Dec</td>
 	  <td>Futhark</td>
 	</tr>
+	<tr>
+	  <td>7. Dec</td>
+	  <td>oCaml</td>
+	</tr>
       </table> 
       </div>
 
