--- a/index.html
+++ b/index.html
@@ -172,6 +172,10 @@ SOFTWARE.
 	  <td>7. Dec</td>
 	  <td>oCaml</td>
 	</tr>
+	<tr>
+	  <td>8. Dec</td>
+	  <td>awk</td>
+	</tr>
       </table> 
       </div>
 
