Updated with language of the day

--- a/index.html
+++ b/index.html
@@ -176,6 +176,10 @@ SOFTWARE.
 	  <td>8. Dec</td>
 	  <td>awk</td>
 	</tr>
+	<tr>
+	  <td>9. Dec</td>
+	  <td>Lua</td>
+	</tr>
       </table> 
       </div>
 
