Updated with scratch

--- a/index.html
+++ b/index.html
@@ -180,6 +180,10 @@ SOFTWARE.
 	  <td>9. Dec</td>
 	  <td>Lua</td>
 	</tr>
+	<tr>
+	  <td>10. Dec</td>
+	  <td>Scratch</td>
+	</tr>
       </table> 
       </div>
 
