Added next language

--- a/index.html
+++ b/index.html
@@ -184,6 +184,10 @@ SOFTWARE.
 	  <td>10. Dec</td>
 	  <td>Scratch</td>
 	</tr>
+	<tr>
+	  <td>11. Dec</td>
+	  <td>Hare</td>
+	</tr>
       </table> 
       </div>
 
