--- a/index.html
+++ b/index.html
@@ -188,6 +188,10 @@ SOFTWARE.
 	  <td>11. Dec</td>
 	  <td>Hare</td>
 	</tr>
+	<tr>
+	  <td>12. Dec</td>
+	  <td>Ml, Sml or Moscow ML</td>
+	</tr>
       </table> 
       </div>
 
