next language added

--- a/index.html
+++ b/index.html
@@ -192,6 +192,10 @@ SOFTWARE.
 	  <td>12. Dec</td>
 	  <td>Ml, Sml or Moscow ML</td>
 	</tr>
+	<tr>
+	  <td>13. Dec</td>
+	  <td>Ruby</td>
+	</tr>
       </table> 
       </div>
 
