next language added

--- a/index.html
+++ b/index.html
@@ -200,6 +200,10 @@ SOFTWARE.
 	  <td>14. Dec</td>
 	  <td>C#</td>
 	</tr>
+	<tr>
+	  <td>15. Dec</td>
+	  <td>Go</td>
+	</tr>
       </table> 
       </div>
 
