next language added

--- a/index.html
+++ b/index.html
@@ -204,6 +204,10 @@ SOFTWARE.
 	  <td>15. Dec</td>
 	  <td>Go</td>
 	</tr>
+	<tr>
+	  <td>16. Dec</td>
+	  <td>Perl</td>
+	</tr>
       </table> 
       </div>
 
